k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-service
  labels:
    app: go-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-service
  template:
    metadata:
      labels:
        app: go-service
    spec:
      containers:
        - name: go-service
          image: go-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
