k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /ingest
            pathType: Prefix
            backend:
              service:
                name: go-service
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: go-service
                port:
                  number: 80
